display multiple images in project show

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [@project, @image] do |f| %>
-  <%= f.input :photo %>
-  <%= f.input :photo_cache, as: :hidden %>
+  <%= f.input :photo_url, as: :file %>
+  <%= f.input :photo_url_cache, as: :hidden %>
   <%= f.submit %>
 <% end %>
