--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,4 +12,6 @@
   <%= @project.client %>
 </div>
 
-<%= link_to "edit", edit_project_path %>
+<% if current_user %>
+  <%= link_to "edit", edit_project_path %>
+<% end %>
