--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,12 @@
      <script>
       $(document).ready(function(){
         $('.slider').bxSlider({
-          slideWidth: 800
+          slideWidth: 1000,
+          slideMargin: 10,
+          minSlides: 1,
+          // ticker: true,
+          // speed: 5000
+
         });
       });
   </script>
