--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,11 @@
 PROJECTS
 
+<div class="projects-container">
+  <% @projects.each do |project| %>
+    <div class="project-card">
+      <%= link_to project.name, project_path(project)%>
+      <!-- cl_image_tag project.images.first.photo_url -->
+    </div>
+  <% end %>
+</div>
 
-<% @projects.each do |project| %>
-<%= project.name %>
-<%= link_to "Project", project_path(project)%>
-<% end %>
