--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,5 +13,7 @@
 </div>
 
 <% if current_user %>
-  <%= link_to "edit", edit_project_path %>
+  <%= link_to "edit", edit_project_path(@project) %>
+  <%= link_to "Add an image",  new_project_image_path(@project) %>
 <% end %>
+
