added category filters to projects

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,13 @@
 PROJECTS
 
+<dib class="filters">
+  <%= link_to "Landscape design", projects_path(category: "Landscape design") %>
+  <%= link_to "Urban and Planning design", projects_path(category: "Urban and Planning design") %>
+  <%= link_to "Interior design", projects_path(category:"Interior design") %>
+  <%= link_to "Events and Festivals", projects_path(category: "Events and Festivals") %>
+  <%= link_to "Corporate", projects_path(category: "Corporate") %>
+</dib>
+
 <div class="projects-container">
   <% @projects.each do |project| %>
     <div class="project-card">
