moved filter to homeage

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,5 +1,6 @@
 .projects-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 20px;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
 }
