--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,11 @@
 <p>Find me in app/views/pages/home.html.erb</p>
 
 <%= link_to "Projects", projects_path %>
+
+<dib class="filters">
+  <%= link_to "Landscape design", projects_path(category: "Landscape design") %>
+  <%= link_to "Urban and Planning design", projects_path(category: "Urban and Planning design") %>
+  <%= link_to "Interior design", projects_path(category:"Interior design") %>
+  <%= link_to "Events and Festivals", projects_path(category: "Events and Festivals") %>
+  <%= link_to "Corporate", projects_path(category: "Corporate") %>
+</dib>
