--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,19 +1,13 @@
 PROJECTS
 
-<dib class="filters">
-  <%= link_to "Landscape design", projects_path(category: "Landscape design") %>
-  <%= link_to "Urban and Planning design", projects_path(category: "Urban and Planning design") %>
-  <%= link_to "Interior design", projects_path(category:"Interior design") %>
-  <%= link_to "Events and Festivals", projects_path(category: "Events and Festivals") %>
-  <%= link_to "Corporate", projects_path(category: "Corporate") %>
-</dib>
-
 <div class="projects-container">
   <% @projects.each do |project| %>
     <div class="project-card">
-      <%= link_to project.name, project_path(project)%>
+      <%= image_tag "project.jpg" %>
+      <div class="project-name">
+        <%= link_to project.name, project_path(project)%>
+      </div>
       <!-- cl_image_tag project.images.first.photo_url -->
     </div>
   <% end %>
 </div>
-
