modified route to edit images and implemented #edit and #update

--- a/app/views/projects/user_project_show.html.erb
+++ b/app/views/projects/user_project_show.html.erb
@@ -1,10 +1,10 @@
 <h1>PROJECT</h1>
-
 <div class="images-container">
   <div>
   <% @project.images.each do |image| %>
+
     <div> <%= cl_image_tag image.photo_url, height: 400, crop: :fill %></div>
-    <%= link_to 'edit', edit_project_image_path(image) %>
+     <%= link_to 'edit', edit_image_path(image) %>
   <% end %>
   </div>
 </div>
