css grid with square cells

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,10 +3,13 @@ PROJECTS
 <div class="projects-container">
   <% @projects.each do |project| %>
     <div class="project-card">
-      <%= image_tag "project.jpg" %>
+      <div class= "bg">
+
       <div class="project-name">
         <%= link_to project.name, project_path(project)%>
       </div>
+      </div>
+
       <!-- cl_image_tag project.images.first.photo_url -->
     </div>
   <% end %>
