changed position of projects name

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,10 +1,11 @@
 .projects-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  // grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
   grid-auto-rows: 1fr;
+  grid-column-gap: 70px;
+  grid-row-gap: 70px;
+  // grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+  margin: 40px 80px;
 }
 
 .projects-container::before {
