--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,15 +1,24 @@
 
 .project-card {
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  font-size: 10px;
+  font-size: 20px;
   font-weight: bold;
-  // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
+
 .bg {
   background-image: asset-url('project.jpg');
   height: 100%;
+  position: relative;
+}
+
+.project-name {
+  position: absolute;
+  bottom: 30px;
+  left: 20px;
+}
+
+.link-project {
+  color: white;
 }
