--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -8,7 +8,7 @@
 }
 
 .bg {
-  background-image: asset-url('project.jpg');
+  background: linear-gradient(to top, rgba(81, 81, 80, 0.5), rgba(81, 81, 80, 0.1)), asset-url('project.jpg') ;
   height: 100%;
   position: relative;
 }
@@ -22,3 +22,5 @@
 .link-project {
   color: white;
 }
+
+
