--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,12 +1,13 @@
 <h1>PROJECT</h1>
 
-<div class="images-container">
-  <div class="slider">
+<!-- <div class="images-container"> -->
+<div class="owl-carousel">
+  <!-- <div class="slider"> -->
   <% @project.images.each do |image| %>
-    <div> <%= cl_image_tag image.photo_url, height: 400, crop: :fill %></div>
+    <div> <%= cl_image_tag image.photo_url, height: 400, crop: :fill %> </div>
   <% end %>
-  </div>
 </div>
+<!-- </div> -->
 <div>
   <%= @project.name %>
   <%= @project.client %>
