modified carousel options

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,29 +23,10 @@
     $(".owl-carousel").owlCarousel({
       loop:true,
       margin: 20,
-      autoWidth:true,
-      items:4
+       // autoWidth:true,
+      autoHeight:true,
+      items:1
+      // nav: true
     });
-
-  //     $(document).ready(function() {
-
-  // $("#owl-carousel").owlCarousel({
-
-  // navigation: true, // Show next and prev buttons
-  // slideSpeed: 300,
-  // paginationSpeed: 400,
-  // singleItem: true
-
-  // "singleItem:true" is a shortcut for:
-  // items : 1,
-  // itemsDesktop : false,
-  // itemsDesktopSmall : false,
-  // itemsTablet: false,
-  // itemsMobile : false
-
-  // });
-
-  // });
-
-    </script>
+  </script>
 </html>
