modified height project image and size description

--- a/app/assets/stylesheets/pages/_project-show.scss
+++ b/app/assets/stylesheets/pages/_project-show.scss
@@ -1,17 +1,17 @@
 .project-info-container{
   display: flex;
-  margin: 30px 70px;
+  margin: 30px 130px;
 }
 
 .description {
   width: 75%;
-  padding-right: 100px;
+  padding-right: 130px;
 }
 
 .project-info {
   width: 20%;
 }
 
-.carousel-height {
-  height: 600px;
-}
+// .carousel-height {
+//   height: 600px;
+// }
