added destroy action in project controller and delete link in the index

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -7,7 +7,9 @@
         <div class="project-name">
           <%= link_to project.name, project_path(project), class: "link-project"%>
         </div>
-
+        <% if user_signed_in? %>
+        <%= link_to "delete", project_path(project), method: :delete %>
+        <% end %>
       </div>
 
       <!-- cl_image_tag project.images.first.photo_url -->
