--- a/app/views/projects/user-project-show.html.erb
+++ b/app/views/projects/user-project-show.html.erb
@@ -5,6 +5,7 @@
 
     <div> <%= cl_image_tag image.photo_url, height: 400, crop: :fill %></div>
      <%= link_to 'edit', edit_image_path(image) %>
+     <%= link_to "delete", image_path(image), method: :delete %>
   <% end %>
   </div>
 </div>
