--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,10 +7,11 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
-.bg {
-  background: linear-gradient(to top, rgba(81, 81, 80, 0.5), rgba(81, 81, 80, 0.1)), asset-url('project.jpg') ;
+.bg-project {
   height: 100%;
   position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .project-name {
