--- a/app/assets/stylesheets/pages/_project-index.scss
+++ b/app/assets/stylesheets/pages/_project-index.scss
@@ -1,3 +1,3 @@
-.project-bg {
-  background-image: asset-url("project.jpg");
-}
+// .project-bg {
+//   background-image: asset-url("project.jpg");
+// }
