--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
 <div class="projects-container">
   <% @projects.each do |project| %>
     <div class="project-card">
-      <div class= "bg">
+      <div class= "bg-project" style="background-image: linear-gradient(rgba(226,226,226,0.3), rgba(226,226,226,0.3)), url(<%= cl_image_path project.images.first.photo_url, height: 0.5, crop: :fill %>)">
         <div class="project-name">
           <%= link_to project.name, project_path(project), class: "link-project"%>
         </div>
@@ -11,8 +11,6 @@
         <%= link_to "delete", project_path(project), method: :delete %>
         <% end %>
       </div>
-
-      <!-- cl_image_tag project.images.first.photo_url -->
     </div>
   <% end %>
 </div>
