rendered image form in user-project-show

--- a/app/views/projects/user-project-show.html.erb
+++ b/app/views/projects/user-project-show.html.erb
@@ -1,8 +1,11 @@
 <h1>PROJECT</h1>
+
+<div class="project-form">
+  <%= render '/images/form' %>
+</div>
 <div class="images-container">
   <div>
   <% @project.images.each do |image| %>
-
     <div> <%= cl_image_tag image.photo_url, height: 400, crop: :fill %></div>
      <%= link_to 'edit', edit_image_path(image) %>
      <%= link_to "delete", image_path(image), method: :delete %>
