--- a/app/views/projects/user-project-show.html.erb
+++ b/app/views/projects/user-project-show.html.erb
@@ -1,24 +1,34 @@
 <h1>PROJECT</h1>
+<div class="sections-container">
+  <div class="left-section">
+    <div class="project-info-section">
+      <%= link_to "edit", edit_project_path(@project) %>
+      <div>
+        <h2><%= @project.name %></h2>
+        <p><%= @project.client %></p>
+        <p><%= @project.category %></p>
+        <div>
+          <p><%= @project.description %></p>
+        </div>
+      </div>
+    </div>
+    <div class="image-form">
+      <%= render '/images/form' %>
+    </div>
+  </div>
+  <div class="right-section">
 
-<div class="project-form">
-  <%= render '/images/form' %>
-</div>
-<div class="images-container">
-  <div>
-  <% @project.images.each do |image| %>
-    <div> <%= cl_image_tag image.photo_url, height: 400, crop: :fill %></div>
-     <%= link_to 'edit', edit_image_path(image) %>
-     <%= link_to "delete", image_path(image), method: :delete %>
-  <% end %>
+    <div class="images-container">
+      <div>
+      <% @project.images.each do |image| %>
+        <div> <%= cl_image_tag image.photo_url, height: 400, crop: :fill %></div>
+         <%= link_to 'edit', edit_image_path(image) %>
+         <%= link_to "delete", image_path(image), method: :delete %>
+      <% end %>
+      </div>
+    </div>
   </div>
 </div>
-<div>
-  <%= @project.name %>
-  <%= @project.client %>
-</div>
 
-
-  <%= link_to "edit", edit_project_path(@project) %>
-  <%= link_to "Add an image",  new_project_image_path(@project) %>
 
 
