--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "Projects", projects_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "About", "#", class: "nav-link" %>
+          <%= link_to "About", "#", class: "nav-link my-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Contact", "#", class: "nav-link" %>
