--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for([@project, @image], remote: true) do |f| %>
+<%= simple_form_for([project, image], remote: true) do |f| %>
   <%= f.input :photo_url, as: :file %>
   <%= f.input :photo_url_cache, as: :hidden %>
   <%= f.submit %>
