minor style change user project show

--- a/app/views/images/_show.html.erb
+++ b/app/views/images/_show.html.erb
@@ -1,3 +1,7 @@
-<div> <%= cl_image_tag image.photo_url, height: 400, crop: :fill %> </div>
-<%= link_to 'edit', edit_image_path(image) %>
-<%= link_to "delete", image_path(image), method: :delete %>
+<div> <%= cl_image_tag image.photo_url, class: "project-img"%> </div>
+<%= link_to edit_image_path(image) do  %>
+  <i class="far fa-edit"></i>
+<% end %>
+<%= link_to image_path(image), method: :delete do %>
+  <i class="far fa-times-circle"></i>
+<% end %>
