--- a/app/assets/stylesheets/pages/_user-project-show.scss
+++ b/app/assets/stylesheets/pages/_user-project-show.scss
@@ -21,3 +21,13 @@
   padding: 0 30px;
 }
 
+.img-link {
+  position: absolute;
+  top: 26px;
+  left: 12px;
+}
+
+.image-container {
+  position: relative;
+  padding: 15px 0;
+}
