--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: transparent;
+  transition: 0.5s background-color ease;
+
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -11,7 +13,7 @@
   width: 150px;
 }
 
-.navbar {
+.navbar-color {
   background: $main-color;
 }
 
