--- a/app/views/shared/_custom-navbar.html.erb
+++ b/app/views/shared/_custom-navbar.html.erb
@@ -1,7 +1,34 @@
-<div class="c-navbar">
-  <div>
-    <%= link_to "#", class: "navbar-brand" do %>
+<div class="navbar navbar-expand-sm navbar-light navbar-b navbar-home fixed-top">
+  <%= link_to "#", class: "navbar-brand" do %>
     <%= image_tag "Logo.png" %>
-  <% end %>
+    <% end %>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+
+       <li class="nav-item active">
+          <%= link_to "Projects", projects_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "About", "#", class: "nav-link my-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Contact", "#", class: "nav-link" %>
+        </li>
+      <% if user_signed_in? %>
+
+        <li class="nav-item dropdown">
+          <%= image_tag "user.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+          </div>
+        </li>
+      <% end %>
+    </ul>
   </div>
 </div>
