--- a/app/views/shared/_custom-navbar.html.erb
+++ b/app/views/shared/_custom-navbar.html.erb
@@ -1,7 +1,9 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-b navbar-home fixed-top">
-  <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "Logo.png" %>
-    <% end %>
+<div class="navbar navbar-expand-sm navbar-light navbar-b navbar-home fixed-top justify-content-end">
+  <div id="logo"class="d-none logo-left">
+    <%= link_to "#", class: "navbar-brand" do %>
+      <%= image_tag "Logo.png" %>
+      <% end %>
+  </div>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
