changed color scheme

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 <%= content_for :navigation, render('shared/custom-navbar') %>
 <div class="bg-container">
-  <h1>Bhayo</h1>
+  <div class="bahyo-img">
+    <%= image_tag "logo-hp.svg" %>
+  </div>
 </div>
 
 <%= link_to "Projects", projects_path %>
