--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,4 @@
 .navbar-b {
-  // justify-content: space-between;
   background: transparent;
   transition: 0.5s background-color ease;
 }
@@ -12,8 +11,12 @@
   width: 150px;
 }
 
+.navbar-home {
+  background: white;
+}
 .navbar-color {
-  background: $main-color;
+  justify-content: space-between;
+  background: white;
 }
 
 .nav-item {
@@ -23,15 +26,15 @@
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: #FFF;
+  color: $main-color;
 }
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #FFF;
+  color: $main-color;
   opacity: 0.8;
 }
 
 .navbar-light .navbar-nav .active > .nav-link {
-  color: #FFF;
+  color: $main-color;
 }
 
 .logo-left {
