initial structure homepage

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,3 +5,13 @@
   display:flex;
   align-items: center;
 }
+
+.intro {
+  margin-top: 300px;
+  text-align: center;
+  font-size: 26px;
+}
+
+.filters {
+  margin-top: 300px;
+}
