added padding sections about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,41 +1,56 @@
-<h1>About</h1
-
-
-<div>
-  <div class="">
-    Bahyo Studio is a creative and design-led, design firm which commits to developing sustainable, cost-effective solutions. We aim to bring together creative design solutions to our clients.
-‍
-    ​We work collaboratively with our team members and ensure our design is delivered through carefully considered processes starting with the big picture into the detail design and through construction, always with our client’s needs in mind.
-    ‍
-    We offer a comprehensive and client focused architectural and interiors service, covering all aspects of the design and build process from concepts to planning to completion, with respect for both budget and time frame. We guarantee to deliver the best design service with our expertise in architecture and interior design.
+<div class="main-container">
+  <div class="top-section">
+    <h1 class="about-title">About</h1>
+    <div>
+      <div class="about-text">
+        <p>
+          Bahyo Studio is a creative and design-led, design firm which commits to developing sustainable, cost-effective solutions. We aim to bring together creative design solutions to our clients.
+        </p>
+        ‍<p>
+          We work collaboratively with our team members and ensure our design is delivered through carefully considered processes starting with the big picture into the detail design and through construction, always with our client’s needs in mind.
+        </p>
+        ‍<p> ‍
+          We offer a comprehensive and client focused architectural and interiors service, covering all aspects of the design and build process from concepts to planning to completion, with respect for both budget and time frame. We guarantee to deliver the best design service with our expertise in architecture and interior design.
+        </p>
+      </div>
+    </div>
   </div>
-</div>
 
-<div>
-  <p>
-    Creativity
-  </p>
-  <p>
-    Passion
-  </p>
-  <p>
-    Design
-  </p>
-</div>
+  <div class="middle-section">
+    <div>
+      <p>
+        Creativity
+      </p>
+    </div>
+    <div>
+      <p>
+        Passion
+      </p>
+    </div>
+    <div>
+      <p>
+        Design
+      </p>
+    </div>
+  </div>
 
-<div>
-  <p>Giuliana Santos</p>
-</div>
+  <div class="bottom-section">
+    <div>
+      <p class="about-title">Giuliana Santos</p>
+    </div>
 
-<div>
-  <%= image_tag 'About-img.jpeg' %>
-  <div>
-    <p>
-      Giulian design landscapes that help create healthy and happy communities, facilitating spaces with social significance, as well as strengthening the connectivity of environmental networks and protecting and enhancing biodiversity.
-
-    </p>
-    <p>
-      Her approach as a landscaper is to mix scientific and technical analyses with nature, creating places that have form, function and beauty. Developing creative solutions to practical and aesthetic challenges, using practical strategies to evaluate the character of landscapes and the visual impact of the environment.
-    </p>
+    <div class="about-info-container">
+      <div class="about-text text-bottom">
+        <p>
+          Giuliana design landscapes that help create healthy and happy communities, facilitating spaces with social significance, as well as strengthening the connectivity of environmental networks and protecting and enhancing biodiversity.
+        </p>
+        <p>
+          Her approach as a landscaper is to mix scientific and technical analyses with nature, creating places that have form, function and beauty. Developing creative solutions to practical and aesthetic challenges, using practical strategies to evaluate the character of landscapes and the visual impact of the environment.
+        </p>
+      </div>
+      <div class="about-img">
+        <%= image_tag 'About-img.jpeg' %>
+      </div>
+    </div>
   </div>
 </div>
