--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="main-container">
   <div class="top-section">
-    <h1 class="about-title">About</h1>
+    <h3 class="about-title">About</h3>
     <div>
       <div class="about-text">
         <p>
@@ -15,28 +15,28 @@
       </div>
     </div>
   </div>
-
-  <div class="middle-section">
-    <div>
+</div>
+<div class="middle-section">
+    <div class="attr">
       <p>
-        Creativity
+        Creativity.
       </p>
     </div>
-    <div>
+    <div class="attr middle">
       <p>
-        Passion
+        Passion.
       </p>
     </div>
-    <div>
+    <div class="attr">
       <p>
-        Design
+        Design.
       </p>
     </div>
-  </div>
-
+</div>
+<div class="main-container">
   <div class="bottom-section">
     <div>
-      <p class="about-title">Giuliana Santos</p>
+      <h3 class="about-title">Giuliana Santos</h3>
     </div>
 
     <div class="about-info-container">
