--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,21 +1,23 @@
 
-<div class="sections-container">
+<div class="container-sections">
   <div class="section-left">
-    <h1>Get in touch</h1>
+    <div class="form-section">
+      <h1>Get in touch</h1>
 
-    <div class="contact-form">
-      <form action="">
-        <div class="form-group email-input">
-          <input type="email" name="email" id="" placeholder="Your email" class="form-control">
-        </div>
-        <div class="form-group">
-          <textarea name="message" id="" cols="30" rows="10" placeholder="Your message" class="form-control"></textarea>
-        </div>
-        <button type="submit">send message</button>
-      </form>
+      <div class="contact-form">
+        <form action="">
+          <div class="form-group email-input">
+            <input type="email" name="email" id="" placeholder="Your email" class="form-control">
+          </div>
+          <div class="form-group">
+            <textarea name="message" id="" cols="30" rows="10" placeholder="Your message" class="form-control"></textarea>
+          </div>
+          <button type="submit">send message</button>
+        </form>
+      </div>
     </div>
   </div>
   <div class="section-rigth">
-    <p>If you would like to discuss a project or find out more about our work we’d be pleased to speak to you. Please email us</p>
+    <p>If you would like to discuss a project or find out more about our work we’d be pleased to speak to you. Please contact us.</p>
   </div>
 </div>
