--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -12,7 +12,9 @@
           <div class="form-group">
             <textarea name="message" id="" cols="30" rows="10" placeholder="Your message" class="form-control"></textarea>
           </div>
-          <button type="submit">send message</button>
+          <div class="d-flex justify-content-center">
+            <button type="submit" class="submit-btn">send message</button>
+          </div>
         </form>
       </div>
     </div>
