--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -7,3 +7,12 @@
     text-decoration: none;
   }
 }
+
+.submit-btn {
+  padding: 8px 22px;
+  background-color: $main-color;
+  border-radius: 4px;
+  border: none;
+  color: white;
+  margin-top: 30px;
+}
