--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,10 +15,10 @@
           <%= link_to "Projects", projects_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "About", "#", class: "nav-link my-link" %>
+          <%= link_to "About", pages_about_path, class: "nav-link my-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Contact", "#", class: "nav-link" %>
+          <%= link_to "Contact", pages_contact_path, class: "nav-link" %>
         </li>
       <% if user_signed_in? %>
 
